assets/stylesheets/home.css
section.hero {
  height: 80vh;
  width: 100vw;
  position: relative;
}
section.hero.hero-static {
  background-size: cover;
  background-position: center;
  display: flex;
  align-items: center;
}
section.hero.hero-static .hero-static-inner {
  width: 90%;
  max-width: 1200px;
  margin: auto;
}
section.hero.hero-static .content {
  color: #fff;
  max-width: 640px;
}
section.hero.hero-static .content h1 {
  font-size: 48px;
  margin-bottom: 16px;
}
section.hero.hero-static .content p {
  margin-bottom: 16px;
  line-height: 1.7;
}
section.hero.hero-static .content a {
  display: inline-block;
  padding: 16px;
  border: 1.5px solid #fff;
  color: #fff;
}
section.hero .swiper {
  height: 100%;
  width: 100%;
}
section.hero .swiper .swiper-slide {
  position: relative;
}
section.hero .swiper .swiper-slide img {
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: top;
     object-position: top;
  position: absolute;
  top: 0;
  left: 0;
}
section.hero .swiper .swiper-slide.slide-1::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(circle at center, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.8));
}
section.hero .swiper .swiper-slide.slide-2::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(circle at center, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.8));
}
section.hero .swiper .swiper-slide.slide-3::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(circle at center, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5));
}
section.hero .swiper .swiper-slide.slide-4 img {
  -o-object-position: center;
     object-position: center;
}
section.hero .swiper .swiper-slide.slide-4::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(circle at center, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.8));
}
section.hero .swiper .swiper-slide.slide-5::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(circle at center, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.8));
}
section.hero .swiper .swiper-slide.slide-6::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: radial-gradient(circle at center, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.8));
}
section.hero .swiper .content {
  position: relative;
  z-index: 6;
  color: #fff;
  width: 90%;
  max-width: 1200px;
  margin: auto;
  padding-top: 100px;
}
section.hero .swiper .content h1 {
  font-size: 48px;
  margin-bottom: 16px;
}
section.hero .swiper .content p {
  max-width: 600px;
  margin-bottom: 16px;
  line-height: 1.7;
}
section.hero .swiper .content a {
  display: inline-block;
  padding: 16px;
  border: 1.5px solid #fff;
}

.swiper-pagination {
  bottom: 10px;
  display: none !important;
}

.swiper-button-next,
.swiper-button-prev {
  display: none !important;
  color: #fff;
}

section.features-1 {
  position: relative;
  top: -36px;
  z-index: 20;
}
section.features-1 .container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
}
section.features-1 .container .feature {
  background: #444444;
  color: #fff;
  padding: 16px 24px;
  border-right: 1px solid rgba(245, 245, 245, 0.4);
}
section.features-1 .container .feature svg {
  display: inline-block;
  margin-bottom: 8px;
}
section.features-1 .container .feature svg path {
  fill: #fff;
}
section.features-1 .container .feature:first-child svg path {
  fill: unset;
  stroke: #fff;
}
section.features-1 .container .feature h2 {
  font-size: 22px;
  line-height: 1.25;
  margin-bottom: 8px;
}
section.features-1 .container .feature p {
  font-size: 14px;
  font-weight: 300;
  line-height: 1.5;
  opacity: 0.92;
  max-width: 26ch;
}

section.latest-news {
  border-bottom: 4px solid #444444;
  border-top: 1px solid rgba(245, 245, 245, 0.4);
  background: #fff;
  display: grid;
  grid-template-columns: 200px auto;
  align-items: center;
  text-transform: uppercase;
  font-size: 14px;
  width: 100vw;
  overflow: hidden;
}
section.latest-news .title {
  background: #e3e6ea;
  border-right: 4px solid #f13223;
  z-index: 1;
  padding: 10px 0;
  font-weight: 600;
}
section.latest-news .title span {
  display: block;
  text-align: center;
}

.ticker-wrapper {
  display: flex;
  animation: ticker-scroll infinite linear;
}

.ticker-wrapper span {
  margin-right: 20px; /* Adjust spacing between headlines */
}

@keyframes ticker-scroll {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}
section.features-2 .container {
  padding-top: 64px;
}
section.features-2 .container .heading {
  text-align: center;
  margin-bottom: 50px;
}
section.features-2 .container .heading h2 {
  margin-bottom: 14px;
  font-size: 27.6px;
  color: #000;
}
section.features-2 .container .heading h2 span {
  font-weight: 400;
  color: #262626;
}
section.features-2 .container .heading p {
  line-height: 160%;
  max-width: 600px;
  margin: auto;
}
section.features-2 .container .features {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  gap: 24px;
  justify-content: center;
}
section.features-2 .container .features .feature {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}
section.features-2 .container .features .feature svg {
  height: 60px;
  width: 60px;
}
section.features-2 .container .features .feature img {
  height: 60px;
}

section.loan-calculator .container {
  position: relative;
  z-index: 3;
  top: 200px;
  display: grid;
  grid-template-columns: minmax(0, 1.45fr) minmax(320px, 1fr);
  gap: 24px;
  align-items: stretch;
}
/* ... */

